--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "remark-rehype": "^11.1.2",
     "resend": "^4.2.0",
     "unified": "^11.0.5",
+    "unist-util-visit": "^5.1.0",
     "web-vitals": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/hast": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
